add reporte ops

--- a/app/views/contabilidad/ordenesPagosCircuitos/indexOrdenPagoCircuito.scala.html
+++ b/app/views/contabilidad/ordenesPagosCircuitos/indexOrdenPagoCircuito.scala.html
@@ -30,6 +30,9 @@
 		<div class="col-sm-5">
 			<div class="dropdown pull-right">
 				<button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown"> <i class="glyphicon glyphicon-list-alt"></i> Reportes <span class="caret"></span></button>
+				<ul class="dropdown-menu">
+					<li><a id="reporteLineasCircuitoOp" href="#" data-url="@controllers.contabilidad.routes.OrdenesPagosCircuitosController.reporteLineas()">Exportar</a></li>
+				</ul>
 			</div>
 			<div class="dropdown pull-right btn-header">
 				<button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown"> <i class="glyphicon glyphicon-cog"></i> Acciones <span class="caret"></span> </button>
