--- a/app/views/contabilidad/balance/indexBalance.scala.html
+++ b/app/views/contabilidad/balance/indexBalance.scala.html
@@ -175,6 +175,12 @@
 				</label>
 				</div>
 				<div class="col-sm-2">
+						<label class="control-label"> 
+							Marca
+							@select(formBuscador("marca"),options(""->"","SI"->"SI","NO"->"NO"), 'class -> "form-control select")
+						</label>
+					</div>
+				<div class="col-sm-2">
 					<div class="form-group">
 					<label for="nombre" class="control-label">&nbsp;</label>
 					<button  class="form-control btn btn-primary"><i class="glyphicon glyphicon-search"></i> Buscar</button>
