--- a/app/views/patrimonio/remitos/editarRemito.scala.html
+++ b/app/views/patrimonio/remitos/editarRemito.scala.html
@@ -8,7 +8,7 @@
 	<div class="page-header">
 		<div class="row">
 			<div class="col-sm-10">
-				<h1>Editar remito</h1>
+				<h1>Editar remito - @if(remitoForm("recepcion_id") != null){<span style="color:red;font-weight: bold;font-size:14px; ">Fecha Limite: @Remito.getExpedienteMas7Dias(new Integer(remitoForm("recepcion_id").value)) </span>}</h1>
 			</div>			 
 		</div>
 	</div> 
