--- a/app/views/compras/ordenes/indexOrden.scala.html
+++ b/app/views/compras/ordenes/indexOrden.scala.html
@@ -61,6 +61,7 @@
 				    @if(Permiso.check("ordenesCompraReporteControProfe")) {
 				    <li role="presentation"><a class="controlProfe" data-url="@controllers.compras.routes.OrdenesReportesController.controlProfe(12)" href="#">Control PROFE 2021</a></li>
 				    <li role="presentation"><a class="controlProfe" data-url="@controllers.compras.routes.OrdenesReportesController.controlProfe(13)" href="#">Control PROFE 2022</a></li>
+				    <li role="presentation"><a class="controlProfe" data-url="@controllers.compras.routes.OrdenesReportesController.controlProfe(14)" href="#">Control PROFE 2023</a></li>
 				    }
 				  	
 				  </ul>
