sin control fecha

--- a/app/views/patrimonio/remitos/formRemito.scala.html
+++ b/app/views/patrimonio/remitos/formRemito.scala.html
@@ -43,6 +43,13 @@
 			<div class="text-error">@error.message</div>
 		}
 	</div>
+	<div class="col-sm-4">
+		<div class="checkbox">
+			<label>
+				Sin Control Fecha @checkbox(remitoForm("sin_control_fecha"))
+			</label>
+		</div> 
+	</div>
 }else{
 	<div class="row menu-acciones">
 		<div class="col-sm-10">
