add impuesto nuevo

--- a/app/views/contabilidad/facturasLineasImpuestos/formLineaImpuesto.scala.html
+++ b/app/views/contabilidad/facturasLineasImpuestos/formLineaImpuesto.scala.html
@@ -40,7 +40,7 @@ $(function(){
 		}
 		
 		if($('#cuenta_id_modal_rete').val() != ''){
-			if($('#cuenta_id_modal_rete').val() == 284 || $('#cuenta_id_modal_rete').val() == 544){
+			if($('#cuenta_id_modal_rete').val() == 284 || $('#cuenta_id_modal_rete').val() == 544 || $('#cuenta_id_modal_rete').val() == 565){
 				url = $('#nombre_impuesto').attr("dataUrl");
 				url= "/contabilidad/factura-linea-impuesto/getSecuenciaGanancias"
 				var data = "";
