--- a/app/views/contabilidad/mainContabilidad.scala.html
+++ b/app/views/contabilidad/mainContabilidad.scala.html
@@ -43,6 +43,7 @@
 					<li class="titulo">Balance General</li>
 						<li><a href="@controllers.contabilidad.routes.BalanceController.index()?cuenta_propia_id=2">Balance</a></li>
 						<li><a href="@controllers.contabilidad.routes.BalanceController.general()">Balance general</a></li>
+						<li><a href="@controllers.contabilidad.routes.BalanceController.controlBalanceFactura()">Control Balance Facturas</a></li>
 					}
 					
 						
