--- a/app/views/patrimonio/baul/formRemitoBaul.scala.html
+++ b/app/views/patrimonio/baul/formRemitoBaul.scala.html
@@ -1,12 +1,18 @@
 @(rForm: Form[RemitoBaul])
 @import helper._
 @import utils._
-@implicitFieldConstructor = @{ FieldConstructor(simpleInput.render) } 
+@implicitFieldConstructor = @{ FieldConstructor(simpleInput.render) }
+
+<script>
+	$( function() {
+		$("#numero").mask("9999-99999999");
+	});
+</script>
 
 
 <div class="row menu-acciones">
 	<div class="col-sm-10">
-		<button type="submit" class="btn btn-default" title="Guardar certificación"><i class="glyphicon glyphicon-floppy-disk"></i> Guardar</button>	
+		<button type="submit" class="btn btn-default" title="Guardar certificación"><i class="glyphicon glyphicon-floppy-disk"></i> Guardar</button>
     	<a href="@controllers.patrimonio.routes.RemitosBaulController.index()" title="Cancelar" class="btn btn-default"><i class="glyphicon glyphicon-floppy-remove"></i> Cancelar</a>
     </div>
 </div>
@@ -18,16 +24,16 @@
 	<div class="col-sm-2">
 		<div class="form-group @if(rForm.error("numero") != null) {has-error} else {has-required}">
 			<label for="numero" class="control-label">Número</label>
-			@inputText(rForm("numero"), 'class -> "form-control")
+			@inputText(rForm("numero"), 'class -> "form-control",'id->"numero")
 			@rForm("numero").error.map{ error =>
 				<div class="text-error">@error.message</div>
 			}
 		</div>
 	</div>
-	
+
 	<div class="col-sm-2">
 		<div class="form-group @if(rForm.error("fecha") != null) {has-error}">
-			<label for="fechaRemito" class="control-label">Fecha de remito</label> 
+			<label for="fechaRemito" class="control-label">Fecha de remito</label>
 			@inputText(rForm("fecha"),'class -> "form-control date")
 		</div>
 	</div>
@@ -39,13 +45,13 @@
 				@inputText(rForm("proveedor.nombre"), 'name -> "", 'class -> "form-control", 'id -> "proveedor")
 				<span class="input-group-addon">
 					<a href="#" class="searchModal"
-								id="searchProveedor" 
-								data-title="Selección de Proveedores" 
-								data-url="@controllers.compras.routes.ProveedoresController.modalBuscar()" 
-								data-height="650" 
-								data-width="700" 
-								data-listen="modal.seleccion.proveedor.simple" 
-								data-label="#proveedor" 
+								id="searchProveedor"
+								data-title="Selección de Proveedores"
+								data-url="@controllers.compras.routes.ProveedoresController.modalBuscar()"
+								data-height="650"
+								data-width="700"
+								data-listen="modal.seleccion.proveedor.simple"
+								data-label="#proveedor"
 								data-field="#proveedor_id">
 						<i class="glyphicon glyphicon-search"></i>
 					</a>
@@ -60,7 +66,7 @@
 <div class="row">
 
 	<div class="col-sm-12">
-		<label for="fechaRemito" class="control-label">Observaciones</label> 
+		<label for="fechaRemito" class="control-label">Observaciones</label>
 		@textarea(rForm("observaciones"), 'class -> "form-control", 'rows -> "4")
 	</div>
 </div>
@@ -71,6 +77,6 @@ $( function(){
 	$('#searchProveedor').modalSearch();
 	$("#precio, #cantidad, #descuento").numeric_input({allowNegative: true});
 })
-</script>	
+</script>
 
 <hr />
